# nvo7-predictor

./: .gitignore  CONTRIBUTING.md  DATA.md  LICENSE  README.md  app.py  compare_scenarios.py  generate_test_files.py  index.py  predict.py  pyproject.toml  requirements.txt  setup.py
config/: default.yaml
files/2022/: average_grades_BEL_MAT-2022.xlsx  klasirane_3_2022.xlsx
files/2023/: average_grades_BEL_MAT-2023.xlsx  klasirane_3_2023.xlsx  klasirane_4_2023.xlsx  spisak_uchilishta_s_priem_2022_2023-pril_1.xlsx  spisak_uchilishta_s_priem_2023_2024-pril_1.xlsx
files/2024/: average_grades_BEL-2024.xlsx  average_grades_BEL_MAT-2024.xlsx  average_grades_MAT-2024.xlsx  spisak_uchilishta_s_priem_2024_2025-pril_1.xlsx
files/2025/: average_grades_BEL-2025.xlsx  average_grades_BEL_MAT-2025.xlsx  average_grades_MAT-2025.xlsx  spisak_uchilishta_s_priem_2025_2026-pril_1.xlsx
files/2026/: average_grades_BEL_MAT-2026.xlsx
files/2026_better/: average_grades_BEL_MAT-2026.xlsx
files/2026_worse/: average_grades_BEL_MAT-2026.xlsx
nvo/: config.py
nvo/cli/: commands.py
nvo/data/: exam_loaders.py  loaders.py  parsers.py  processors.py  rename_detection.py  sample_data.py
nvo/display/: __init__.py  formatters.py
nvo/models/: equipercentile.py  persistence.py  prediction_utils.py  predictor.py  trainer.py
nvo/services/: __init__.py  analysis.py  common.py  prediction.py  validation.py
nvo/utils/: logger.py
