[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nvo7-predictor"
version = "1.0.0"
description = "ML-based prediction system for Bulgarian 7th grade high school admission cutoff scores"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Zhivko Georgiev", email = "zhivko.d.georgiev@gmail.com"}]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.0.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "xgboost>=2.0.0,<3.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "PyYAML>=6.0,<7.0",
    "click>=8.1.0,<9.0.0",
    "tqdm>=4.65.0,<5.0.0",
    "streamlit>=1.28.0,<2.0.0",
    "plotly>=5.18.0,<6.0.0",
]

[project.scripts]
nvo = "nvo.cli.commands:cli"

[project.urls]
Homepage = "https://github.com/zhivko-georgiev/nvo7-predictor"
Repository = "https://github.com/zhivko-georgiev/nvo7-predictor"

[tool.setuptools.packages.find]
where = ["."]
include = ["nvo*"]
